# hybridilusmu

./: .codecov.yml  .dockerignore  .eslintrc.js  .gitignore  .sequelizerc  Dockerfile  README.md  actionFunctions.js  codecov.yml  compose-ci.yaml  compose-dev.yaml  compose-e2e.yaml  compose.yaml  database.js  databaseService.js  dateFunctions.js  docker-compose-staging.yml  docker-compose.old.yml  docker-compose.test.yml  docker-compose.yml  eventListeners.js  helperFunctions.js  home.js  index.js  kayttoohjeet.md  kayttoonottoohjeet.md  logic.js  manifest.yml  middleware.js  package-lock.json  package.json  quotenv.js  responses.js  scheduleMessage.js  slashCommands.js  timestampedLogger.js  tsconfig.json  usergroups.js
.github/: dependabot.yaml
Files for Humans/: kayttoonottoohjeet.md  manifest.yml
app/: .dockerignore  .eslintrc.yaml  .sequelizerc  .sequelizerc.js  Dockerfile  package-lock.json  package.json
app-nest/: .eslintrc.yaml  manifest.yaml  package-lock.json  package.json
app_files/: dateFunctions.js  middleware.js
blocks/: actions.js  divider.js  header.js  section.js
controllers/: db.controllers.js
dev/: .eslintrc.js  migrate.js
docs/: Developing.md  Releases.md  Tests.md  cicd_pipeline.md  kayttoohje.md  kayttoonottoohjeet.md  manifest.yml  package-lock.json  package.json  slack-sovelluksen_perusteet.md  testaaminen.md
docs_old/: Tests.md  kayttoonottoohjeet.md  manifest.yml  (+1 more)
e2e/: .eslintrc.js  .gitignore  Dockerfile  cypress.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
e2e/cypress/: test-test.cy.ts
(+213 files in other folders)
